youtube video link updated

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -450,7 +450,7 @@
                                  <br> <a href="{% url 'gazette-page' %}">
                                     2. Themed as "Unravelling a Metamorph: Energy in Transit", Gazette 10.0 is here to take
                                     you to an erudite virtual read-out ride!!</a><br>
-                                 <br> <a href="https://www.youtube.com/watch?v=PRax4pizJcs">
+                                 <br> <a href="https://www.youtube.com/watch?v=2f2ZrcqlCFI">
                                     3. The first big juncture of SPE IIT (ISM) Dhanbad SC Essentials+ series - Machine
                                     Learning Workshop by Mr. Prithvi Singh Chauhan. Catch us live for the beginning session
                                     tonight at 9 PM!</a><br>
@@ -700,7 +700,7 @@
     </div>
 
     <div style="text-align: center;">
-            <iframe width="75%" height="538" src="https://www.youtube.com/embed/PRax4pizJcs" title="YouTube video player"
+            <iframe width="75%" height="538" src="https://www.youtube.com/embed/2f2ZrcqlCFI" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen ></iframe>
     </div>
