youtube video link updated and team member changed

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -369,15 +369,15 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img class="round-img" src="{% static 'pages/developer-img/nirmalya.jpg' %}" alt="Avatar">
+                    <img class="round-img" src="{% static 'pages/developer-img/bsmeghma.jpg' %}" alt="Avatar">
                 </div>
-                <div class="flip-card-back flip-border" style="background-image: url(/static/pages/developer-img/nirmalya-blur.jpg);">
-                    <h1 class="card-title" style="color: white;">Nirmalya Basu</h1>
+                <div class="flip-card-back flip-border" style="background-image: url(/static/pages/developer-img/bsmeghma-blur.jpg);">
+                    <h1 class="card-title" style="color: white;">Meghma</h1>
                     <hr class="underline" style="background-color: white;">
                     <p class="card-content" style="color: white;">Content Writer</p>
-                    <a href="http://linkedin.com/in/nirmalya-basu-6161a4120">
+                    <a href="https://www.linkedin.com/in/meghma-b-s-123ab71a1?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BK3jJ366NTB%2B6hnNcy7dULQ%3D%3D">
                         <i class="fa fa-linkedin"></i></a>
-                    <a href="https://www.facebook.com/nirmalya.basu.14">
+                    <a href="https://www.facebook.com/meghma.bs.9/">
                         <i class="fa fa-facebook"></i></a>
                 </div>
             </div>
