event page bug fixed

--- a/SPE-website/events/templates/events/events_detail.html
+++ b/SPE-website/events/templates/events/events_detail.html
@@ -26,11 +26,7 @@
                     <!-- Event Poster -->
                     {% if object.img_url %}
                         <img id="PostImage" src ="{{ object.img_url }}"
-                             style="width: 500px; float: right;
-                                @media screen and (max-width: 770px) {
-                                    width: 320px;
-                                    margin: 5px;
-                                }">
+                             style="width: 320px; float: right;">
                     {% endif %}
                     <!-- Event Poster -->
 
