--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -372,7 +372,7 @@
                     <img class="round-img" src="{% static 'pages/developer-img/bsmeghma.jpg' %}" alt="Avatar">
                 </div>
                 <div class="flip-card-back flip-border" style="background-image: url(/static/pages/developer-img/bsmeghma-blur.jpg);">
-                    <h1 class="card-title" style="color: black;">Meghma</h1>
+                    <h1 class="card-title" style="color: black;">B S Meghma</h1>
                     <hr class="underline" style="background-color: black;">
                     <p class="card-content" style="color: white;">Content Writer</p>
                     <a href="https://www.linkedin.com/in/meghma-b-s-123ab71a1?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BK3jJ366NTB%2B6hnNcy7dULQ%3D%3D">
