--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -450,14 +450,6 @@
                                  <br> <a href="{% url 'gazette-page' %}">
                                     2. Themed as "Unravelling a Metamorph: Energy in Transit", Gazette 10.0 is here to take
                                     you to an erudite virtual read-out ride!!</a><br>
-                                 <br> <a href="https://www.youtube.com/watch?v=Pje9_Lny03g">
-                                    3. The first big juncture of SPE IIT (ISM) Dhanbad SC Essentials+ series - Machine
-                                    Learning Workshop by Mr. Prithvi Singh Chauhan. Catch us live for the beginning session
-                                    tonight at 9 PM!</a><br>
-                                 <br> <a href="http://www.iitismspe.org/Events/Event/23/">
-                                    4. Under the banner of the Diversity and Inclusion, the SPE IIT (ISM) Dhanbad SC is
-                                    glad to present an Essay Competition on the occasion of Pride Month'21! Express a
-                                    powerful message through your words this June 🏳️‍🌈.</a><br>
                                 </b></p>
                             </marquee>
                             <br>
@@ -700,7 +692,7 @@
     </div>
 
     <div style="text-align: center;">
-            <iframe width="75%" height="538" src="https://www.youtube.com/embed/Pje9_Lny03g" title="YouTube video player"
+            <iframe width="75%" height="538" src="https://www.youtube.com/embed/FmKZIxqkMTg" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen ></iframe>
     </div>
