--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -692,7 +692,7 @@
     </div>
 
     <div style="text-align: center;">
-            <iframe width="75%" height="538" src="https://www.youtube.com/embed/FmKZIxqkMTg" title="YouTube video player"
+            <iframe width="75%" height="538" src="https://www.youtube.com/embed/M8VSnadKqww&t" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen ></iframe>
     </div>
