name of HOD changed

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -78,7 +78,7 @@
                     <!-- Card CSS: core-team0.css line 88-96 -->
                     <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/HOD-blur.jpg);">
                         <!-- Card CSS: core-team0.css line 104-109, 111-116, 118-122 -->
-                        <h1 class="card-title" style="color: black;">Dr. Ajay Mandal</h1>
+                        <h1 class="card-title" style="color: black;">Dr. Keka Ojha</h1>
                         <hr class="underline" style="background-color: black;">
                         <p class="card-content" style="color: black;">Head of the Department, Petroleum Engineering</p>
                         <!-- Card CSS: core-team0.css line 124-137 -->
