changed the image,name and  social media of V.Pres
Changed the image, name and social media links of Vice President from Preet Kothari Sir to Satyam Gupta Sir( Blur image not done)

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -129,14 +129,14 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/preet-sir.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/Satyam_Gupta_Sir.jpg' %}" alt="Avatar">
                     </div>
                     <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/preet-sir-blur.jpg);">
-                        <h1 class="card-title" style="color: white;">Preet Kothari</h1>
+                        <h1 class="card-title" style="color: white;">Satyam Gupta</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Vice President</p>
-                        <a href="https://www.facebook.com/profile.php?id=100008168837557"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.linkedin.com/in/preet-kothari-a9884b172"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100037141251561"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/satyam-gupta-a3b73a120/"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
