--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -73,17 +73,17 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <!-- Card CSS: core-team0.css line 98-102, 73-79 -->
-                        <img class="round-img" src="{% static 'pages/office-bearers/HOD.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/Keka_Maam.jpeg' %}" alt="Avatar">
                     </div>
                     <!-- Card CSS: core-team0.css line 88-96 -->
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/HOD-blur.jpg);">
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/Keka_Maam_blur.jpg);">
                         <!-- Card CSS: core-team0.css line 104-109, 111-116, 118-122 -->
                         <h1 class="card-title" style="color: black;">Dr. Keka Ojha</h1>
                         <hr class="underline" style="background-color: black;">
                         <p class="card-content" style="color: black;">Head of the Department, Petroleum Engineering</p>
                         <!-- Card CSS: core-team0.css line 124-137 -->
-                        <a href="https://www.linkedin.com/in/ajay-mandal-62762524/"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/mandal.ajay"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/keka-ojha-9490bb14/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/keka.ojha"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
@@ -111,15 +111,15 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/anurag-sir.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/Bhautik_Sir_2.jpg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/anurag-sir-blur.jpg);">
-                        <h1 class="card-title" style="color: white;">Anurag Jain</h1>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/Bhautik_Sir_2_blur.jpg);">
+                        <h1 class="card-title" style="color: white;">Bhautik Agrawal</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">President</p>
-                        <a href="https://www.linkedin.com/in/anuragskj">
+                        <a href="https://www.linkedin.com/in/bhautik-agrawal-a22349166">
                             <i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/connectanurag.j"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/bhautik.agrawal.3"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
