--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -131,7 +131,7 @@
                     <div class="flip-card-front">
                         <img class="round-img" src="{% static 'pages/office-bearers/Satyam_Gupta_Sir.jpg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/preet-sir-blur.jpg);">
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/Satyam_Gupta_Sir_blur.jpg);">
                         <h1 class="card-title" style="color: white;">Satyam Gupta</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Vice President</p>
@@ -149,16 +149,16 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/shamita-maam.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/Raj_Sir.jpeg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/shamita-maam-blur.jpg);">
-                        <h1 class="card-title" style="color:white;">Shamita Jain</h1>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/Raj_Sir_blur.jpg);">
+                        <h1 class="card-title" style="color:white;">Raj Kumar</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Secretary</p>
-                        <a href="https://www.linkedin.com/in/shamita-jain-21171a175"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/shamita.jain.73"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/rajkumar672/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/raj.pratap.54966834"><i class="fa fa-facebook"></i></a>
                     </div>
-                </div>
+                </div>.
             </div>
             <!-- Card -->
 
@@ -166,14 +166,14 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/soumya-maam.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/Meghma_maam.jpeg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/soumya-maam-blur.jpg);">
-                        <h1 class="card-title" style="color: white;">Soumya Krishna</h1>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/Meghma_maam_blur.jpg);">
+                        <h1 class="card-title" style="color: white;">BS Meghma</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Communications Chairperson</p>
-                        <a href="https://www.linkedin.com/in/somya-krishna-0bb721172"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/somya.krishna.5"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/meghma-b-s-123ab71a1/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/meghma.bs.9"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
@@ -183,14 +183,14 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="round-img" src="{% static 'pages/office-bearers/rajwardhan-sir.jpg' %}" alt="Avatar">
+                        <img class="round-img" src="{% static 'pages/office-bearers/Trisha_maam.jpeg' %}" alt="Avatar">
                     </div>
-                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/rajwardhan-sir-blur.jpg);">
-                        <h1 class="card-title" style="color: white;">Rajwardhan Rawat</h1>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/Trisha_maam_blur.jpg);">
+                        <h1 class="card-title" style="color: white;">Trisha Biswas</h1>
                         <hr class="underline" style="background-color: white;">
                         <p class="card-content" style="color: white;">Program Chairperson</p>
-                        <a href="https://www.linkedin.com/in/rajvardhanrawat/"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://www.facebook.com/rajvardhan.rawat.9"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/trisha/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/trisha.biswas.50"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
