changed core team and added 2 ofc. bearer
Added two new office bearers in anew container and added new core team link and added css of new container in this file

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -30,6 +30,11 @@
         margin: auto;
     }
     
+    .grid-container-2-col {
+        justify-content: center;
+        margin: auto;
+    }
+    
     @media screen and (min-width: 1200px) {
         .flip-card {
             margin: 70px;
@@ -196,6 +201,42 @@
             </div>
             <!-- Card -->
         </div>
+        <!--New addition-->
+        <div class="grid-container-2-col">
+            <!-- Card -->
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img class="round-img" src="{% static 'pages/office-bearers/Hritwik_Sir_3 .jpg' %}" alt="Avatar">
+                    </div>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/Hritwik_Sir_blur_3.jpg);">
+                        <h1 class="card-title" style="color: white;">Hritwik Ranjan</h1>
+                        <hr class="underline" style="background-color: white;">
+                        <p class="card-content" style="color: white;">Webmaster</p>
+                        <a href="https://www.linkedin.com/in/hritwik-ranjan/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100009683348917"><i class="fa fa-facebook"></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- Card -->
+            <!-- Card -->
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img class="round-img" src="{% static 'pages/office-bearers/Bishal_Sir_2.jpeg' %}" alt="Avatar">
+                    </div>
+                    <div class="flip-card-back flip-border" style="background-image: url(/static/pages/office-bearers/Bishal_Sir_2_blur.jpg);">
+                        <h1 class="card-title" style="color: white;">Bishal Dutta</h1>
+                        <hr class="underline" style="background-color: white;">
+                        <p class="card-content" style="color: white;">Social Activities Chairperson</p>
+                        <a href="https://www.linkedin.com/in/bishal-dutta-85b6381a6/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/bishal.dutta.372019"><i class="fa fa-facebook"></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- Card -->
+        
+        </div>
 
 <!--        <div class="grid-container">-->
 <!--            &lt;!&ndash; Card &ndash;&gt;-->
@@ -245,7 +286,7 @@
     <h1 class="office-bearers d-flex justify-content-center">Core Team:</h1>
     <hr class="office-bearers-underline d-block mr-auto" style="margin-bottom: 40px;">
 </div>
-<img class="team-vector d-block mx-auto" src="{% static 'pages/team-images/core-team-2021.jpg' %}" style=" width: 90%; height: auto;">
+<img class="team-vector d-block mx-auto" src="{% static 'pages/team-images/core team 2k22.jpg' %}" style=" width: 90%; height: auto;">
 <!--Core Team Section-->
 
 <br><br><br><br>
