last 2 images aligned
display flex

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -33,6 +33,7 @@
     .grid-container-2-col {
         justify-content: center;
         margin: auto;
+        display: flex;
     }
     
     @media screen and (min-width: 1200px) {
